# learning-based-sling-load-state-estimation-for-uavs

./: .gitignore  launch.sh  noetic-desktop.rosinstall
Assets/Characters/FirstPersonCharacter/Scripts/: RigidbodyFirstPersonController.cs
Assets/GrassFlowers/Textures/GrassFlowers/: NewLayer.terrainlayer
Assets/Mountain Terrain/Trees/materials/: polySurface1Mat.mat
Assets/NatureManufacture Assets/Winter Background Mountains/Models/Textures/: NewLayer.terrainlayer
Assets/NatureStarterKit2/Nature/: tree04.prefab
Assets/Quadrotor/: NewLayer 5.terrainlayer  NewLayer 6.terrainlayer  NewLayer 7.terrainlayer  NewLayer 8.terrainlayer  Quadrotor.3DS  Quadrotor.prefab
Assets/Quadrotor/Materials/: Plastic Smooth - Black_Propeller_sm.mat
Assets/Quadrotor/Scripts/: AddRenderSegOnTag.cs  OffscreenRGB.renderTexture  PropellersRotate.cs  PropellersRotateInv.cs  QuadrotorController.cs  QuadrotorDynamics.cs  QuadrotorDynamics_w.cs  RandomBeaconLocation.cs  RecordSemanticCamera.cs  RenderSemanticSegmentation.cs  SegCamera.cs  SemanticSegmentation.shader  StatePublisher.cs
Assets/Scenes/: SampleScene.unity  SwingLoad_Yuxia.unity
Assets/Scenes/SampleScene/: ReflectionProbe-0.exr
Assets/Scenes/SampleScene_Profiles/: Post Pro Vol Profile.asset
Assets/Scripts/: CameraSwitcher.cs  CollisionHandler.cs  DepthCamera.cs  FisheyeCamera.cs  FlyCamera.cs  GodCamera.cs  ICommandable.cs  LoadParameters.cs  PoseGrabber.cs  RGBCamera.cs  SensorSwitch.cs  TCPServer.cs  TrueState.cs
Assets/TerrainTexturesPackFree/DemoScene/: Markus_1.lighting
Assets/WorldMaterialsFree/Built-In_RPMaterials/: NewLayer 1.terrainlayer  NewLayer 2.terrainlayer  NewLayer.terrainlayer
ProjectSettings/: ProjectSettings.asset
TezLearning/: dataloader.py  main.ipynb  main.py  matcher.py  model.py  requirements.txt  run_sync_experiments.py  tcp.py  test_evaluation.py  test_existing_endpoints.py  test_generate_csv.py  train.py  utils.py  vector_drawer.py
src/controller_pkg/: CMakeLists.txt  mission.yaml  package.xml  raw_mission.yaml  waypoint_generator.py
src/controller_pkg/src/: controller_node.cpp  mission_node.cpp  traj_publisher.cpp
src/simulation/: CMakeLists.txt  package.xml
src/simulation/launch/: simulation.launch  unity_ros.launch
src/simulation/src/: data_recorder.cpp  imu_parser.h  true_state_parser.h
src/utilities/fla_utils/: CMakeLists.txt
src/utilities/utils/: CMakeLists.txt
